# dynamic-secret-sharing

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  automated_run.sh  bulletin.cpp  dynamic.cpp  dynamic.h  ecc.cpp  homomorphic.cpp  main.cpp  participant.cpp  polynomial.cpp
